Ensure headers are always aligned in text position right
When text is positioned right, all header elements need to have the
same percentage width. Otherwise, since they are aligned on the right,
the title can have a different horizontal position on view ports where
the max-width does not kick in yet.

--- a/app/assets/stylesheets/pageflow/themes/default/page/line_lengths.scss
+++ b/app/assets/stylesheets/pageflow/themes/default/page/line_lengths.scss
@@ -38,6 +38,11 @@ $page-header-title-max-width: 700px !default;
     p {
       margin-left: auto;
       max-width: $page-content-text-position-right-max-width;
+      width: 60%;
+
+      @include mobile {
+        width: 100%;
+      }
     }
 
     .page_header {
